# algorithms

./: README.md
cpp/: CMakeLists.txt  test.cpp
cpp/bfs/: connected_cells_in_a_grid.cpp
cpp/combinatorics/permutations/: README.md  heap_generator.cpp  next_permutation.cpp  prev_permutation.cpp
cpp/dynamic_programming/1_wedding_shopping/: 1_maximum_spend.cpp
cpp/dynamic_programming/2_max_range_sum/: max_1d_range_sum.cpp
cpp/dynamic_programming/3_longest _increasing_subsequence_(LIS)/: 1_lis.cpp  2_lis_with_solutions.cpp
cpp/dynamic_programming/3_longest_increasing_subsequence_(LIS)/: 2_lis_solutions.cpp  3_box_stacking.cpp
cpp/dynamic_programming/4_0-1_knapsack_(subset_sum)/: 1_knapsack.cpp  2_knapsack_solutions.cpp
cpp/dynamic_programming/5_coin_change_(CC)/tabulation/: 2_how_sum.cpp  5_all_sums_rep.cpp
cpp/dynamic_programming/coins/tabulation/: 1_can_sum.cpp  2_how_sum.cpp  3_best_sum.cpp  4_how_many_sums_rep.cpp  5_all_sums_rep.cpp  6_all_sums_no_rep.cpp  7_all_sums_no_rep_dfs.cpp
cpp/dynamic_programming/max_range_sum/: max_2d_range_sum.cpp
cpp/dynamic_programming/wedding_shopping/: 1_maximum_spend.cpp
cpp/graphs/: bellman_ford_adj_matrix.cpp  dijkstra_adj_matrix.cpp
cpp/graphs/minimum_spanning_tree/: README.md  kruskal_edge_list.cpp  prim_adj_list_pq.cpp
cpp/graphs/shortest_path/: 10_floyd_warshall_adj_matrix.cpp  1_bfs_adj_list.cpp  2_bfs_adj_matrix.cpp  3_dijkstra_adj_list.cpp  4_dijkstra_adj_list_pq.cpp  5_dijkstra_adj_matrix.cpp  6_dijkstra_adj_matrix_pq.cpp  7_bellman_ford_adj_list.cpp  8_bellman_ford_adj_matrix.cpp  9_bellman_ford_edge_list.cpp  README.md  bellman_ford_adj_list.cpp  bellman_ford_adj_matrix.cpp  bellman_ford_edge_list.cpp  bfs_adj_list.cpp  bfs_adj_matrix.cpp  dijkstra_adj_list.cpp  dijkstra_adj_list_no_pq.cpp  dijkstra_adj_list_pq.cpp  dijkstra_adj_matrix.cpp  dijkstra_adj_matrix_no_pq.cpp  dijkstra_adj_matrix_pq.cpp  floyd_warshall_adj_matrix.cpp
cpp/string_processing/: palindromes.cpp
cpp/string_processing/suffix_tree/: 1_string_alignment.cpp  2_longest_common_subsequence.cpp  suffix_tree.cpp
